# esm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTIONS.md  LICENSE.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
cookbook/local/: README.md  open_generate.ipynb  raw_forwards.py
cookbook/snippets/: README.md  esm3.py  esmc.py  fold_invfold.py
cookbook/tutorials/: 1_esmprotein.ipynb  2_embed.ipynb  3_gfp_design.ipynb  4_forge_generate.ipynb  5_guided_generation.ipynb  README.md
esm/: __init__.py  pretrained.py
esm/data/: ParentChildTreeFile.txt  entry_list_safety_29026.list  keyword_idf_safety_filtered_58641.npy  keyword_vocabulary_safety_filtered_58641.txt
esm/layers/: attention.py  blocks.py  codebook.py  ffn.py  geom_attention.py  regression_head.py  rotary.py  structure_proj.py  transformer_stack.py
esm/models/: esm3.py  esmc.py  function_decoder.py  vqvae.py
esm/sdk/: __init__.py  api.py  base_forge_client.py  experimental.py  forge.py  retry.py  sagemaker.py
esm/sdk/experimental/: __init__.py  constrained_generation.py  guided_generation.py
esm/tokenization/: __init__.py  function_tokenizer.py  interface_tokenizer.py  residue_tokenizer.py  sasa_tokenizer.py  sequence_tokenizer.py  ss_tokenizer.py  structure_tokenizer.py  tokenizer_base.py
esm/utils/: decoding.py  encoding.py  forge_context_manager.py  generation.py  generation_test.py  misc.py  misc_test.py  noise_schedules.py  parsing.py  residue_constants.py  sampling.py  sampling_test.py  sequential_dataclass.py  system.py  types.py
esm/utils/constants/: api.py  esm3.py  models.py  physics.py
esm/utils/function/: encode_decode.py  interpro.py  lsh.py  tfidf.py
esm/utils/msa/: __init__.py  filter_sequences.py  msa.py
esm/utils/structure/: affine3d.py  aligner.py  atom_indexer.py  input_builder.py  lddt.py  metrics.py  mmcif_parsing.py  molecular_complex.py  normalize_coordinates.py  predicted_aligned_error.py  protein_chain.py  protein_complex.py  protein_structure.py
esm/widgets/components/: function_annotator.py  results_visualizer.py  sasa_prompt_selector.py  secondary_structure_prompt_selector.py  sequence_prompt_selector.py  structure_prompt_selector.py
esm/widgets/utils/: clients.py  indexing.py  parsing.py  printing.py  prompting.py  protein_import.py  serialization.py  types.py
esm/widgets/utils/drawing/: colors.py  draw_category_array.py  draw_function_annotations.py  draw_protein_structure.py
esm/widgets/views/: esm3_generation_launcher.py  esm3_prompt_preview.py  esm3_prompt_selector.py  generation.py  inverse_folding.py  login.py  prediction.py
examples/: esmc_examples.py  esmprotein.ipynb  folding_inverse_folding_example.py  forge_generate.ipynb  forge_generate.py  generate.ipynb  gfp_design.ipynb  invfold.py  local_client.py  local_generate.py  raw_forwards.py  requirements.txt  seqfun_struct.py
tests/: Makefile
tests/oss_pytests/: Dockerfile  requirements.txt  test_oss_client.py  test_placeholder.py
tools/: README.md  generate.ipynb  generation.ipynb  invfold.ipynb  predict.ipynb
