[project]
name = "esm"
version = "3.2.0"
description = "EvolutionaryScale open model repository"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {name = "EvolutionaryScale Team"}
]

maintainers = [
  {name = "Zeming Lin", email = "zeming+esm@evolutionaryscale.ai" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3.10",
]

dependencies = [
  "torch>=2.2.0",
  "torchvision",
  "torchtext",
  "transformers<4.48.2",
  "ipython",
  "einops",
  "biotite>=1.0.0",
  "msgpack-numpy",
  "biopython",
  "scikit-learn",
  "brotli",
  "attrs",
  "pandas",
  "cloudpathlib",
  "tenacity",
  "zstd"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["esm*"]

[tool.setuptools.package-data]
esm = ["data/*"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

# These are build dependencies, to ensure pip support, keep run-time deps above in `dependencies`
[tool.pixi.dependencies]
pkg-config = "*"
cmake = "*"
pip = "*"
twine = "*"

[tool.pixi.pypi-dependencies]
esm = { path = ".", editable = true }

[tool.pixi.tasks]
build-wheel = "python -m pip wheel --no-deps -w dist ."
upload-wheel = "python -m twine upload --repository pypi"
